# ros_components_description

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  package.xml
.github/workflows/: colcon_test_build.yaml
config/: gz_kinova_remappings.yaml  gz_oak_remappings.yaml  gz_orbbec_astra_remappings.yaml  gz_ouster_os_remappings.yaml  gz_slamtec_rplidar_remappings.yaml  gz_stereolabs_zed_remappings.yaml  gz_teltonika_remappings.yaml  gz_velodyne_remappings.yaml
launch/: CAM01.launch.py  LDR01.launch.py  LDR06.launch.py  gz_components.launch.py  gz_kinova.launch.py  gz_kinova_6dof.launch.py  gz_kinova_7dof.launch.py  gz_oak.launch.py  gz_orbbec_astra.launch.py  gz_ouster_os.launch.py  gz_robotiq.launch.py  gz_slamtec_rplidar.launch.py  gz_stereolabs_zed.launch.py  gz_teltonika.launch.py  gz_ur.launch.py  gz_velodyne.launch.py
test/: component.urdf.xacro  test_components_xacro.py  test_components_yaml_parse.py
urdf/: components.urdf.xacro  intel_realsense_d435.urdf.xacro  kinova.urdf.xacro  luxonis_oak.urdf.xacro  orbbec_astra.urdf.xacro  ouster.urdf.xacro  ouster_os01.urdf.xacro  ouster_os1_32.urdf.xacro  slamtec_rplidar.urdf.xacro  slamtec_rplidar_a2.urdf.xacro  slamtec_rplidar_a3.urdf.xacro  slamtec_rplidar_s1.urdf.xacro  slamtec_rplidar_s2.urdf.xacro  slamtec_rplidar_s3.urdf.xacro  stereolabs_zed.urdf.xacro  teltonika_003R-00253.urdf.xacro  ur.urdf.xacro  velodyne_puck.urdf.xacro
